--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
-  "scripts": {
-    "postinstall": "bower install && pulp build",
-    "validate": "pulp run"
+  "name": "purescript-validation-experiment",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "pulp --psc-package build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ptrfrncsmrph/purescript-validation-experiment.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ptrfrncsmrph/purescript-validation-experiment/issues"
+  },
+  "homepage": "https://github.com/ptrfrncsmrph/purescript-validation-experiment#readme",
   "devDependencies": {
-    "bower": "^1.8.2",
-    "pulp": "^12.0.1",
-    "purescript": "^0.11.7"
+    "psc-package": "^0.3.2",
+    "pscid": "^2.6.0",
+    "pulp": "^12.3.0",
+    "purescript": "^0.12.0"
   }
 }
