--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "pulp --psc-package build"
+    "build": "pulp --psc-package build",
+    "validate": "pulp run"
   },
   "repository": {
     "type": "git",
