--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "purescript-validation-experiment",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pulp --psc-package build",
-    "validate": "pulp run"
+    "postinstall": "psc-package install",
+    "validate": "pulp --psc-package run"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ptrfrncsmrph/purescript-validation-experiment.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "purescript",
+    "validation"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ptrfrncsmrph/purescript-validation-experiment/issues"
@@ -24,7 +20,6 @@
   "homepage": "https://github.com/ptrfrncsmrph/purescript-validation-experiment#readme",
   "devDependencies": {
     "psc-package": "^0.3.2",
-    "pscid": "^2.6.0",
     "pulp": "^12.3.0",
     "purescript": "^0.12.0"
   }
